--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <!-- #region header -->
   <header class="header">
       <div class="header__top">
-        <img src="./img/logo.png" alt="Bose Logo">
-        <img src="./img/icons/icon-burger-menu.png" alt="Burger menu" class="burger">
+        <img src="../img/logo.png" alt="Bose Logo">
+        <img src="../img/icons/icon-burger-menu.png" alt="Burger menu" class="burger">
       </div>
       <div class="header__bottom">
         <img src="/img/sound-waves.png" alt="Sound Waves">
