fixed other links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img src="../img/icons/icon-burger-menu.png" alt="Burger menu" class="burger">
       </div>
       <div class="header__bottom">
-        <img src="/img/sound-waves.png" alt="Sound Waves">
+        <img src="../img/sound-waves.png" alt="Sound Waves">
         <h1 class="header-title">The world shades. <br> Your music shines.</h1>
       </div>
   </header>
@@ -31,8 +31,8 @@
   <!--#region menu  -->
   <div class="menu">
     <div class="header__top">
-      <img src="/img/logo.png" alt="Bose Logo">
-      <img src="/img/icons/icon-close.png" alt="Icon Close" class="close">
+      <img src="../img/logo.png" alt="Bose Logo">
+      <img src="../img/icons/icon-close.png" alt="Icon Close" class="close">
     </div>
     <nav class="navbar">
       <ul class="menu__list">
