add section products

--- a/index.html
+++ b/index.html
@@ -53,21 +53,45 @@
   </div>
   <!-- /.menu -->
 <!-- endregion -->
-  <main class="main">
+ <!-- #region main -->
+<main class="main">
     <section class="recommended" id="recommended">
         <h2 class="section-title">Recommended</h2>
+        <div class="product__cards">
+          <artical class="product">
+            <img src="./img/products/product-1.png" alt="Product Photo" class="product__photo">
+            <h3 class="product__title">Bose portable Smart speaker</h3>
+            <p class="product__category">Smart home</p>
+            <p class="product__price">$ 399.00</p>
+          </artical>
+          <artical class="product">
+            <img src="./img/products/product-2.png" alt="Product Photo" class="product__photo">
+            <h3 class="product__title">SoundLink Flex Bluetooth speaker</h3>
+            <p class="product__category">Portable bluetooth</p>
+            <p class="product__price">$ 149.00</p>
+          </artical>
+          <artical class="product">
+            <img src="./img/products/product-3.png" alt="Product Photo" class="product__photo">
+            <h3 class="product__title">SoundLink Color Bluetooth speaker II</h3>
+            <p class="product__category">Portable bluetooth</p>
+            <p class="product__price">$ 129.00</p>
+          </artical>
+        </div>
     </section>
     <section class="products" id="categories">
         <h2 class="section-title">Browse Bose <br> products by category</h2>
     </section>
     <section class="advantage" id="how-to-buy">
-        <h2 class="section-title">Why buy direct <br> from Bose</h2>
+        <h2 class="section-title how-to-buy">Why buy direct <br> from Bose</h2>
     </section>
   </main>
   <!-- /.main -->
+<!-- endregion -->
+<!-- #region footer -->
   <footer class="footer">
 
   </footer>
   <!-- /.footer -->
+<!-- #endregion -->
 </body>
 </html>
