added section product and footer

--- a/index.html
+++ b/index.html
@@ -78,11 +78,44 @@
           </artical>
         </div>
     </section>
-    <section class="products" id="categories">
+    <section class="categories" id="categories">
         <h2 class="section-title">Browse Bose <br> products by category</h2>
+        <article class="category">
+          <div class="category__photos">
+            <img src="./img/category/headphones-white.jpg" alt="Headphone photo" class="category__wide">
+            <img src="./img/category/headphones-square.jpg" alt="Headphone photo" class="category__square">
+          </div>
+          <h3 class="product__title">Headphones & earbuds</h3>
+        </article>
+        <article class="category">
+          <div class="category__photos">
+            <img src="./img/category/speakers-white.jpg" alt="Speakers photo" class="category__wide">
+            <img src="./img/category/speakers-square.jpg" alt="Speakers photo" class="category__square">
+          </div>
+          <h3 class="product__title">Speakers</h3>
+        </article>
+        <article class="category">
+          <div class="category__photos">
+            <img src="./img/category/audio-square.jpg" alt="Audio sunglasses photo" class="category__square">
+            <img src="./img/category/audio-white.jpg" alt="Audio sunglasses photo" class="category__wide">
+          </div>
+          <h3 class="product__title">Audio sunglasses</h3>
+        </article>
     </section>
-    <section class="advantage" id="how-to-buy">
-        <h2 class="section-title how-to-buy">Why buy direct <br> from Bose</h2>
+    <section class="how-to-buy" id="how-to-buy">
+        <h2 class="section-title how-to-buy__title">Why buy direct <br> from Bose</h2>
+        <div class="how-to-buy__content">
+          <ul class="how-to-buy__benefits">
+            <li>Free 2-day shipping and returns</li>
+            <li>90-day risk-free trial</li>
+            <li>World class customer service</li>
+            <li>My Bose account management</li>
+          </ul>
+          <div class="how-to-buy__description">
+            A great product is more than what’s in the box. It’s a promise of premium performance, world-class support, and everything you expect from a trusted brand. 
+            It’s just one of many reasons why you’ll shop with confidence on Bose.com.
+          </div>
+        </div>
     </section>
   </main>
   <!-- /.main -->
