--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   <header class="header">
       <div class="header__top">
         <img src="./img/logo.png" alt="Bose Logo">
-        <!-- <img src="./img/icons/icon-burger-menu.png" alt="Burger menu" class="burger"> -->
-        <div class="burger">
+        <div class="burger"></div>
+        <!-- <div class="burger">
           <span class="first-line"></span>
           <span class="middle-line"></span>
           <span class="threes-line"></span>
-        </div>
+        </div> -->
       </div>
       <div class="header__bottom">
         <img src="./img/sound-waves.png" alt="Sound Waves">
